# ShopSense-AI

./: .gitignore  README.md  docker-compose.yml
core/: config.py
frontend/: README.md  SETUP.md  package-lock.json  package.json
frontend/src/app/: providers.tsx  router.tsx
frontend/src/components/auth/: AuthGuard.tsx  UserButton.tsx
frontend/src/components/comparison/: ComparisonButton.tsx  ComparisonModal.tsx
frontend/src/components/consultation/: MessageBubble.tsx  MessageInput.tsx  SuggestedQuestions.tsx
frontend/src/components/home/: AnimatedBackground.tsx  FloatingShoppingBag.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  MainLayout.tsx
frontend/src/components/products/: ProductCard.tsx
frontend/src/components/recommendations/: TrendingProducts.tsx
frontend/src/components/search/: SearchBar.tsx  SearchResults.tsx
frontend/src/features/admin/api/: adminApi.ts
frontend/src/features/consultation/api/: consultationApi.ts
frontend/src/features/consultation/hooks/: useConsultation.ts
frontend/src/features/products/api/: productsApi.ts
frontend/src/features/products/hooks/: useComparison.ts  useProduct.ts
frontend/src/features/products/store/: comparisonStore.ts
frontend/src/features/recommendations/api/: recommendationsApi.ts
frontend/src/features/recommendations/hooks/: useTrending.ts
frontend/src/features/search/api/: searchApi.ts
frontend/src/features/search/hooks/: useSearch.ts
frontend/src/features/search/store/: searchStore.ts
frontend/src/features/user/api/: userApi.ts
frontend/src/features/user/hooks/: useUserPreferences.ts
frontend/src/pages/: Admin.tsx  Comparison.tsx  Consultation.tsx  Home.tsx  NotFound.tsx  ProductDetail.tsx  Profile.tsx  Search.tsx  Settings.tsx
frontend/src/types/: common.types.ts
services/advisory_engine/: Dockerfile  README.md  pyproject.toml
services/advisory_engine/api/: main.py  middleware.py  routes.py  schemas.py
services/advisory_engine/clients/: clerk_client.py  discovery_client.py  knowledge_client.py  redis_user_client.py
services/advisory_engine/config/: settings.py
services/advisory_engine/core/: consultation.py  recommendations.py
services/discovery_engine/: Dockerfile  README.md  pyproject.toml
services/discovery_engine/api/: main.py  routes.py  schemas.py
services/discovery_engine/config/: settings.py
services/discovery_engine/core/: collectors.py  processors.py  storage.py
services/knowledge_engine/: Dockerfile  README.md  pyproject.toml
services/knowledge_engine/api/: main.py  routes.py  schemas.py
services/knowledge_engine/config/: settings.py
services/knowledge_engine/core/: data.py  evaluation.py  platform.py  training.py
shared/: pyproject.toml
shared/shared/: __init__.py  config.py  logging.py
