[project]
name = "shopsense-advisory"
version = "1.0.0"
description = "Advisory Engine - User-facing recommendations and consultation for ShopSense-AI"
authors = [
    {name = "Yasser El Haddar", email = "yasserelhaddar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
shared = { path = "../../shared", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "clients", "config"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]