[project]
name = "shopsense-discovery"
version = "1.0.0"
description = "Discovery Engine - Product data collection and search for ShopSense-AI"
authors = [
    {name = "ShopSense-AI Team", email = "team@shopsense-ai.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "qdrant-client>=1.6.0",
    "httpx>=0.25.0",
    "sentence-transformers>=2.2.0",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]