[project]
name = "shopsense-knowledge"
version = "1.0.0"
description = "Knowledge Engine - LLM training and model management for ShopSense-AI"
authors = [
    {name = "ShopSense-AI Team", email = "team@shopsense-ai.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "wandb>=0.16.0",
    "openai>=1.0.0",
    "boto3>=1.28.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]