[project]
name = "shopsense-knowledge"
version = "1.0.0"
description = "Knowledge Engine - LLM training and model management for ShopSense-AI"
authors = [
    {name = "Yasser El Haddar", email = "yasserelhaddar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",

    # ML & Training (Core)
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "peft>=0.7.0",  # Parameter-Efficient Fine-Tuning (QLoRA)
    "accelerate>=0.25.0",  # Distributed training utilities
    "trl>=0.7.0",  # Transformer Reinforcement Learning (SFTTrainer)
    "datasets>=2.16.0",  # HuggingFace datasets

    # Evaluation Metrics
    "sacrebleu>=2.3.0",  # BLEU score calculation
    "rouge-score>=0.1.2",  # ROUGE score calculation
    "nltk>=3.8.0",  # Natural language toolkit

    # External APIs
    "openai>=1.0.0",
    "wandb>=0.16.0",
    "boto3>=1.28.0",  # AWS S3 for model storage

    # Shared Package
    "shared",
]

[project.optional-dependencies]
gpu = [
    "bitsandbytes>=0.41.0; platform_system != 'Darwin'",  # 4-bit quantization (GPU only)
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
shared = { path = "../../shared", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "config"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]